--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
+    "@studio-freight/lenis": "^1.0.16",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "nuxt-route-meta": "^2.3.6",
